# superCalc

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Makefile  README.md  calculate.cpp  calculate.h  kingwill.pro  main.cpp  moc_calculate.cpp  operations.cpp  operations.h  superCalc.pro  types.h
supercalc-0.5/: Makefile  README  calculate.cpp  main.cpp  moc_calculate.cpp  superCalc.pro
supercalc-0.5/include/: calculate.h
